--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
     <header>
         <h1>Thrive Tampa</h1>
-        <p>Live Longer. Live Smarter. Live Better.</p>
+        <p>Live Longer. Live Smarter. Live South Tampa.</p>
     </header>
     <div class="container">
         <h2>Welcome to Thrive Tampa</h2>
